# hts

./: .gitignore  .projections.json  cabal.project  flake.nix
01/: Main.hs  l01.cabal
02/: Main.hs  Morse.hs  default.nix  l02.cabal
04/: Main.hs  Parse.hs  Plot.hs  Types.hs  default.nix  l04.cabal
04/resources/: plotMe.xml
12/: Main.hs  l12.cabal
hts-utils/: default.nix  hts-utils.cabal
hts-utils/HTS/: Utils.hs
template/: cookiecutter.json
template/{{cookiecutter.mission_number}}/: l{{cookiecutter.mission_number}}.cabal
