cabal-version: 1.12
name:          l01
version:       0.0.0
build-type:    Simple

executable l01
  main-is:            main.hs
  hs-source-dirs:     .
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wmonomorphism-restriction
    -Wno-missing-export-lists -Wno-orphans -Wno-type-defaults
    -Wpartial-fields -Wredundant-constraints -Wno-x-partial
    -Wno-compat-unqualified-imports -threaded

  build-depends:
      base         >=4.7 && <5
    , bytestring
    , hts-utils
    , mtl
    , zip-archive

  default-language:   Haskell2010
