cabal-version: 1.12
name:          l04
version:       0.0.0
build-type:    Simple
data-dir:      resources/
data-files:    plotMe.xml

executable l04
  main-is:            main.hs
  other-modules:
    Parse
    Paths_l04
    Plot
    Types

  hs-source-dirs:     .
  default-extensions:
    ApplicativeDo
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wmonomorphism-restriction
    -Wno-missing-export-lists -Wno-orphans -Wno-type-defaults
    -Wpartial-fields -Wredundant-constraints -Wno-x-partial
    -Wno-compat-unqualified-imports

  build-depends:
      base              >=4.7 && <5
    , case-insensitive
    , Chart
    , Chart-cairo
    , data-default
    , diagrams
    , exceptions
    , generic-lens
    , JuicyPixels
    , lens
    , linear
    , mtl
    , Rasterific
    , text
    , transformers
    , xml-conduit
    , xml-lens

  default-language:   Haskell2010
