cabal-version: 1.12
name:          l04
version:       0.0.0
build-type:    Simple

executable l04
  main-is:            main.hs
  other-modules:
    Parse
    Plot
    Types

  hs-source-dirs:     .
  default-extensions:
    ApplicativeDo
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wmonomorphism-restriction
    -Wno-missing-export-lists -Wno-orphans -Wno-type-defaults
    -Wpartial-fields -Wredundant-constraints -Wno-x-partial
    -Wno-compat-unqualified-imports -threaded

  build-depends:
      base              >=4.7 && <5
    , bytestring
    , bzlib
    , case-insensitive
    , data-default
    , exceptions
    , hts-utils
    , JuicyPixels
    , lens
    , linear
    , mtl
    , Rasterific
    , text
    , xml-conduit
    , xml-lens

  default-language:   Haskell2010
