cabal-version: 1.12
name:          hts-utils
version:       0.1.0
build-type:    Simple

library
  exposed-modules:    HTS.Utils
  hs-source-dirs:     .
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wmonomorphism-restriction
    -Wno-missing-export-lists -Wno-orphans -Wno-type-defaults
    -Wpartial-fields -Wredundant-constraints -Wno-x-partial
    -Wno-compat-unqualified-imports -threaded

  build-depends:
      base                 >=4.7 && <5
    , bytestring
    , exceptions
    , http-client
    , http-client-openssl
    , http-types

  default-language:   Haskell2010
